Fixed bug where copy-link was too wide.

--- a/resources/assets/scss/pages/boomerang/_boomerang.scss
+++ b/resources/assets/scss/pages/boomerang/_boomerang.scss
@@ -76,8 +76,6 @@
     }
 }
 
-
-
 .congrats-container {
 
     p.annotation {
@@ -88,7 +86,7 @@
     .copy-link {
         padding: 20px;
         color: #3e3e3e;
-        white-space: pre;
+        word-break: break-all;
         border: 1px solid gainsboro;
     }
 
